# windns

./: .appveyor.yml  .gitignore  ChangeLog.md  windns.cabal
.github/workflows/: win.yml
cbits/: hs_windns.h
example/: ex1.hs
src/Network/: DNS.hs
src/Network/DNS/: FFI.hsc
